--- a/css/style.css
+++ b/css/style.css
@@ -10,31 +10,47 @@ video#bgvid {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
+    z-index: 0;
     -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
   /*  background: url(vigvam.jpg) no-repeat;*/
     background-size: cover; 
+    -moz-transition: left .5s ease-in-out;
+    -webkit-transition: left .5s ease-in-out;
+    -o-transition: left .5s ease-in-out;
+    transition: left .5s ease-in-out;
 }
 
 .upper_block{
     z-index: 1;
     height: 154px;
     width: 100%;
-    top: 0;
+    top: -110px;
     position: fixed;
     margin: 0px;
     padding: 0px;
     background: url(../img/upper_block.jpg);
+    -moz-transition: top .3s ease-in-out;
+    -webkit-transition: top .3s ease-in-out;
+    -o-transition: top .3s ease-in-out;
+    transition: top .3s ease-in-out;
 }
 
 .bottom_block{
     z-index: 1;
     height: 154px;
     width: 100%;
-    bottom: 0;
+    bottom: -110px;
     position: fixed;
     background: url(../img/bottom_block.jpg);
+    -moz-transition: bottom .3s ease-in-out;
+    -webkit-transition: bottom .3s ease-in-out;
+    -o-transition: bottom .3s ease-in-out;
+    transition: bottom .3s ease-in-out;
+}
+
+.bg-map{
+    z-index: -1;
 }
