--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 video#bgvid { 
@@ -25,32 +26,65 @@ video#bgvid {
 
 .upper_block{
     z-index: 1;
-    height: 154px;
+    height: 869px;
     width: 100%;
-    top: -110px;
+    top: -810px;
     position: fixed;
-    margin: 0px;
-    padding: 0px;
-    background: url(../img/upper_block.jpg);
-    -moz-transition: top .3s ease-in-out;
-    -webkit-transition: top .3s ease-in-out;
-    -o-transition: top .3s ease-in-out;
-    transition: top .3s ease-in-out;
+    background: url(../img/upper_block-leather2.jpg);
+    -moz-transition: top .5s ease-in-out;
+    -webkit-transition: top .5s ease-in-out;
+    -o-transition: top .5s ease-in-out;
+    transition: top .5s ease-in-out;
 }
 
 .bottom_block{
     z-index: 1;
-    height: 154px;
+    height: 869px;
     width: 100%;
-    bottom: -110px;
+    bottom: -810px;
     position: fixed;
-    background: url(../img/bottom_block.jpg);
-    -moz-transition: bottom .3s ease-in-out;
-    -webkit-transition: bottom .3s ease-in-out;
-    -o-transition: bottom .3s ease-in-out;
-    transition: bottom .3s ease-in-out;
+    background: url(../img/bottom_block-leather2.jpg);
+  /*  -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;*/
+    -moz-transition: bottom .5s ease-in-out;
+    -webkit-transition: bottom .5s ease-in-out;
+    -o-transition: bottom .5s ease-in-out;
+    transition: bottom .5s ease-in-out;
 }
 
 .bg-map{
     z-index: -1;
+}
+
+.navigation{
+    z-index: 0;
+    bottom: -80px;
+    height: 40px;
+    width: 100%;
+    /*background-color: #fff;*/
+    position: fixed;
+}
+.navigation a{
+    text-shadow: -1px 0px 8px rgba(150, 150, 150, 1);
+    font-size: 30px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+}
+.navigation a:hover{
+    font-size: 32px;
+    text-decoration: none;
+}
+.navigation  a, .navigation a:active, .navigation a:visited{
+    text-decoration: none;
+}
+
+.container{
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+    font-size: 80px;
 }
